tests/specs/ecosystem/schematicos/codegen/0_0_3.test
schematicos/codegen/0.0.3
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:@schematicos/types@0.0.46": "npm:@schematicos/types@0.0.46",
      "npm:openapi-types@12.1.3": "npm:openapi-types@12.1.3",
      "npm:ts-pattern@5.1.1": "npm:ts-pattern@5.1.1"
    },
    "npm": {
      "@schematicos/types@0.0.46": {
        "integrity": "sha512-SVbtdlpleitU8sXAb5ofkH1/XwL2o4URctl05QIFTTpJVuNoMNqCy0T3TWfTB/Gn4cX5pBY3MQSs//8WXLaMcQ==",
        "dependencies": {
          "zod": "zod@3.23.8"
        }
      },
      "openapi-types@12.1.3": {
        "integrity": "sha512-N4YtSYJqghVu4iek2ZUvcN/0aqH1kRDuNqzcycDxhOUpg7GdvLa2F3DgS6yBNhInhv2r/6I0Flkn7CqL8+nIcw==",
        "dependencies": {}
      },
      "ts-pattern@5.1.1": {
        "integrity": "sha512-i+owkHr5RYdQxj8olUgRrqpiWH9x27PuWVfXwDmJ/n/CoF/SAa7WW1i2oUpPDMQpJ4U+bGRUcZkVq7i1m3zFCg==",
        "dependencies": {}
      },
      "zod@3.23.8": {
        "integrity": "sha512-XBx9AXhXktjUqnepgTiE5flcKIYWi/rme0Eaj+5Y0lftuGBq+jyRu/md4WnuxqgP1ubdpNCsYEYPxrzVHD8d6g==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/transformers/tanstack-query/mod.ts:5:14
  | 
5 | export const transform = ({
  |              ^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/transformers/supabase-client/mod.ts:4:14
  | 
4 | export const transform = ({
  |              ^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/transformers/rtk-query/mod.ts:6:14
  | 
6 | export const transform = ({
  |              ^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/transformers/mui-joy-forms/mod.ts:4:14
  | 
4 | export const transform = ({
  |              ^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


